@@ -17,6 +17,7 @@ Version 2.1.1
 - Fixed image formatter font searching on Macs (#1188)
 - Fixed deepcopy-ing of Token instances (#1168)
 - Fixed Julia string interpolation (#1170)
+- Fixed statefulness of HttpLexer between get_tokens calls
 - Many smaller fixes to various lexers
 
 
